fix: 내 신고내역 keyword description 대소문자 매칭 일관성 보완